Refactor + Check para detectar mails no enviados.

--- a/stib-administraciones/templates/relaciones/notificaciones_administraciones_list.html
+++ b/stib-administraciones/templates/relaciones/notificaciones_administraciones_list.html
@@ -46,7 +46,8 @@
                         <th>Título</th>
                         <th>Descripción</th>
                         <th>Leído</th>
-                        <th>Mail</th>
+                        <th>Mail Enviado</th>
+                        <th>Mail Recibido</th>
                         <th>Motivos</th>
                     </tr>
                 </thead>
@@ -80,6 +81,7 @@
                                 </td>
                                 <td>{{notificacion.leido|icon_by_boolean}}</td>
                                 <td>{{notificacion.enviado|icon_by_boolean}}</td>
+                                <td>{{notificacion.mail_recibido|icon_by_boolean}}</td>
                                 <td>{{notificacion.tipo_relacion.nombre}}</td>
                             </tr>
                         {% endfor %}
