Fixes para no interpretar Html en los templates

--- a/stib-administraciones/templates/relaciones/_popover_descripcion.html
+++ b/stib-administraciones/templates/relaciones/_popover_descripcion.html
@@ -1,8 +1,8 @@
 <a tabindex="0" data-toggle="popover"
    data-trigger="focus" class='open_popover'
-   data-placement="top"
+   data-placement="left"
    title="<b>Descripción</b>"
-   data-content="{{descripcion}}">
+   data-content="{% autoescape on %}{{descripcion}}{% endautoescape %}">
     [+]
 </a>
 
