--- a/stib-administraciones/templates/relaciones/notificaciones_administraciones_list.html
+++ b/stib-administraciones/templates/relaciones/notificaciones_administraciones_list.html
@@ -48,7 +48,7 @@
                         <th>Leído</th>
                         <th>Mail Enviado</th>
                         <th>Mail Recibido</th>
-                        <th>Motivos</th>
+                        <th>Motivo</th>
                     </tr>
                 </thead>
                 <tbody>
