--- a/stib-administraciones/templates/relaciones/notificaciones_edificios_list.html
+++ b/stib-administraciones/templates/relaciones/notificaciones_edificios_list.html
@@ -51,6 +51,7 @@
                         <th>Mail Enviado</th>
                         <th>Mail Recibido</th>
                         <th>Motivo</th>
+                        <th></th>
                     </tr>
                 </thead>
                 <tbody>
@@ -87,6 +88,14 @@
                                 <td>{{notificacion.enviado|icon_by_boolean}}</td>
                                 <td>{{notificacion.mail_recibido|icon_by_boolean}}</td>
                                 <td>{{notificacion.tipo_relacion.nombre}}</td>
+                                <td>
+                                    {% if notificacion.servicio.nombre %}
+										<a href="{% url 'notificaciones:delete-edificios-servicios' notificacion.id %}">Eliminar</a>
+                                    {% elif notificacion.producto.nombre %}
+										<a href="{% url 'notificaciones:delete-edificios-productos' notificacion.id %}">Eliminar</a>
+									{% endif %}
+
+                                </td>
                             </tr>
                         {% endfor %}
                     {% endif %}
