--- a/stib-administraciones/templates/relaciones/notificaciones_confirm_delete.html
+++ b/stib-administraciones/templates/relaciones/notificaciones_confirm_delete.html
@@ -1,23 +1,21 @@
 {% extends 'base.html' %}
 
-{% block title %}Eliminar Notificacion{% endblock title %}
+{% block title %}Eliminar Notificación{% endblock title %}
 
 {% block content %}
     <br>
     <div class="alert alert-danger">
-		<h1 class="page-header">
-           <i class="fa fa-warning"></i> Eliminar Notificacion
+        <h1 class="page-header">
+           <i class="fa fa-warning"></i> Eliminar Notificación
         </h1>
-		<form action="" method="post">
-		    {% csrf_token %}
-		    <p><b>ATENCIÓN:</b> Está seguro de eliminar la notificacion?
+        <form action="" method="post">
+            {% csrf_token %}
+            <p><b>ATENCIÓN:</b> Está seguro de eliminar la notificación?
             <br>
             - Tenga en cuenta que se eliminaran todos los registros relacionados<br>
             - Los notificaciones eliminadas ya no podran ser vistas por las administraciones
            </p>
-		    <button type="submit" class='btn btn-danger'><i class="fa fa-trash-o"></i> Eliminar</button>
-		</form>
+            <button type="submit" class='btn btn-danger'><i class="fa fa-trash-o"></i> Eliminar</button>
+        </form>
     </div>
-
-
 {% endblock %}
