Mail recibido en filtro de notificaciones

--- a/stib-administraciones/templates/relaciones/_show_search_form.html
+++ b/stib-administraciones/templates/relaciones/_show_search_form.html
@@ -49,6 +49,15 @@
                                             {{search_form.motivos|as_crispy_field}}
                                         </div>
                                     </div>
+
+<div class="row">
+                                    <div class="col-lg-6">
+                                            {{search_form.mail_recibido|as_crispy_field}}
+                                        </div>
+                                        <div class="col-lg-6">
+                                            
+                                        </div>
+                                    </div>
                                     <div class="row">
                                         <div class="col-lg-6">
                                             {{search_form.fecha_desde|as_crispy_field}}
