Notificaciones, Nuevos campos en el formulario de busqueda.

--- a/stib-administraciones/templates/relaciones/_show_search_form.html
+++ b/stib-administraciones/templates/relaciones/_show_search_form.html
@@ -49,13 +49,12 @@
                                             {{search_form.motivos|as_crispy_field}}
                                         </div>
                                     </div>
-
-<div class="row">
-                                    <div class="col-lg-6">
+                                    <div class="row">
+                                        <div class="col-lg-6">
                                             {{search_form.mail_recibido|as_crispy_field}}
                                         </div>
                                         <div class="col-lg-6">
-                                            
+                                            {{search_form.estado|as_crispy_field}}
                                         </div>
                                     </div>
                                     <div class="row">
