--- a/stib-administraciones/templates/relaciones/_show_search_form.html
+++ b/stib-administraciones/templates/relaciones/_show_search_form.html
@@ -17,6 +17,7 @@
                                     {{search_form.producto}}
                                     {{search_form.servicio}}
                                     {{search_form.edificio}}
+                                    {{search_form.usuario}}
                                     <div class="row">
                                         <div class="col-lg-6">
                                             {{search_form.titulo|as_crispy_field}}
@@ -68,10 +69,10 @@
                                     <div class="row">
                                         <div class="col-lg-12">
                                             {% if search_form.edificio_nombre %}
-                                            {{search_form.edificio_nombre|as_crispy_field}}
+                                                {{search_form.edificio_nombre|as_crispy_field}}
                                             {% endif %}
-                                            {% if search_form.usuarios %}
-                                            {{search_form.usuarios|as_crispy_field}}
+                                            {% if search_form.usuario %}
+                                                {{search_form.administracion_nombre_comercial|as_crispy_field}}
                                             {% endif %}
                                         </div>
 
