--- a/stib-administraciones/templates/edificios/edificios_list.html
+++ b/stib-administraciones/templates/edificios/edificios_list.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% load pagination_tags %}
+{% load crispy_forms_tags %}
 
 {% block title %} Edificios {% endblock %}
 
@@ -12,6 +13,27 @@
                 <a href="{% url 'edificios:create' %}" class="btn btn-primary">
                     <i class="fa fa-plus"></i> Agregar Edificio
                 </a>
+
+                <form method="get">
+                    <div class="row">
+                        <div class="col-lg-6">
+                            {{ form_search.nombre|as_crispy_field }}
+                        </div>
+                        <div class="col-lg-6">
+                            {{ form_search.direccion|as_crispy_field }}
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-6">
+                            {{ form_search.codigo|as_crispy_field }}
+                        </div>
+                        <div class="col-lg-6">
+                            {{ form_search.comentario|as_crispy_field }}
+                        </div>
+                    </div>
+
+                    <button type="submit" class="btn btn-primary"><i class="fa fa-search"></i> Buscar</button>
+                </form>
 
                 <table cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered" id="dt_grid">
                     <thead>
