--- a/stib-administraciones/templates/_menu_lateral.html
+++ b/stib-administraciones/templates/_menu_lateral.html
@@ -20,7 +20,7 @@
                     </ul>
                 </li>
                 <li class="notas_tecnicas">
-                    <a href="#"><i class="fa fa-bullhorn fa-fw"></i> Notas Técnicas <span class="fa arrow"></span></a>
+                    <a href="#"><i class="fa fa-file-text-o fa-fw"></i> Notas Técnicas <span class="fa arrow"></span></a>
                     <ul class="nav nav-second-level">
                         <li class="notas_tecnicas">
                             <a href="{% url 'notas-tecnicas:create' %}"><i class="fa fa-chevron-circle-right"></i> Enviar</a>
