Notas Técnicas - Envíos. WIP

--- a/stib-administraciones/templates/notas_tecnicas/notastecnicas_form.html
+++ b/stib-administraciones/templates/notas_tecnicas/notastecnicas_form.html
@@ -28,6 +28,7 @@
 
 {% block javascript %}
     {{ block.super }}
+    <script src="{% static 'js/notificaciones-autocomplete.js' %}"></script>
     <script>
         /* --------------------------------------------
             Configuracion Tinymce editor
