--- a/stib-administraciones/templates/notas_tecnicas/notastecnicas_form.html
+++ b/stib-administraciones/templates/notas_tecnicas/notastecnicas_form.html
@@ -8,7 +8,7 @@
 {% block content %}
     <div class="row">
         <div class="col-lg-12">
-            <h1 class="page-header">Notas Técnicas</h1>
+            <h1 class="page-header">Envío de Notas Técnicas</h1>
         </div>
     </div>
     <div class="row">
