Listado de Notas Técnicas

--- a/stib-administraciones/templates/_menu_lateral.html
+++ b/stib-administraciones/templates/_menu_lateral.html
@@ -26,7 +26,7 @@
                             <a href="{% url 'notas-tecnicas:create' %}"><i class="fa fa-chevron-circle-right"></i> Enviar</a>
                         </li>
                         <li class="notas_tecnicas">
-                            <a href='#'><i class="fa fa-bars"></i> Historial</a>
+                            <a href="{% url 'notas-tecnicas:list' %}"><i class="fa fa-bars"></i> Historial</a>
                         </li>
                     </ul>
                 </li>
