--- a/stib-administraciones/templates/notas_tecnicas/notastecnicas_list.html
+++ b/stib-administraciones/templates/notas_tecnicas/notastecnicas_list.html
@@ -36,8 +36,6 @@
                         <div class="panel-body">
                             <form method="post">
                                 {% csrf_token %}
-                                {{search_form.producto}}
-                                {{search_form.servicio}}
                                 <div class="row">
                                     <div class="col-lg-6">
                                         {{search_form.titulo|as_crispy_field}}
@@ -155,3 +153,8 @@
         </div>
     </div>
 {% endblock %}
+
+{% block javascript %}
+    {{ block.super }}
+    <script src="{% static 'js/notificaciones-autocomplete.js' %}"></script>
+{% endblock javascript %}
