--- a/stib-administraciones/templates/notas_tecnicas/notastecnicas_confirm_delete.html
+++ b/stib-administraciones/templates/notas_tecnicas/notastecnicas_confirm_delete.html
@@ -16,6 +16,7 @@
             - Las notas técnicas eliminadas ya no podran ser vistas por las administraciones
            </p>
             <button type="submit" class='btn btn-danger'><i class="fa fa-trash-o"></i> Eliminar</button>
+            <a href="{% url 'notas-tecnicas:list' %}">Cancelar</a>
         </form>
     </div>
 {% endblock %}
