Notas Técnicas, reenvio de emails

--- a/stib-administraciones/templates/notas_tecnicas/notastecnicas_list.html
+++ b/stib-administraciones/templates/notas_tecnicas/notastecnicas_list.html
@@ -139,6 +139,11 @@
                                                     <i class="fa fa-trash-o"></i> Eliminar
                                                 </a>
                                             </li>
+                                            <li>
+                                                <a href="{% url 'notas-tecnicas:reenviar-mail' nota_tecnica.id %}">
+                                                    <i class="fa fa-share"></i> Reenviar Email
+                                                </a>
+                                            </li>
                                         </ul>
                                     </div>
                                 </td>
