--- a/stib-administraciones/templates/dashboard/index.html
+++ b/stib-administraciones/templates/dashboard/index.html
@@ -12,11 +12,11 @@
                 <div class="panel-heading">
                     <i class="fa fa-bars text-white"></i> Últimas 5 notas técnicas
                 </div>
-                <div class="panel-body">
-                    <div class="well">
+                <div class="panel-body dashboard_block_panel">
                     {% for nt in notas_tecnicas %}
-                        <div class="row" style="margin-bottom:5px">
-                            <div class="col-lg-4">
+                        <div class="row row_box
+                            {% if forloop.counter|divisibleby:2 == False %}alt0{% else %}alt1{% endif %}">
+                            <div class="col-sm-4">
                                 <a href="{% url 'edificios:administraciones' nt.edificio.id %}">
                                 {% if nt.edificio.foto_fachada %}
                                     <img src="{% thumbnail nt.edificio.foto_fachada 100x100 crop %}" alt="No imagen">
@@ -26,21 +26,20 @@
                                 {{nt.edificio.direccion}}
                                 </a>
                             </div>
-                            <div class="col-lg-6">
-                                <div style="padding-top:25%">
+                            <div class="col-sm-6">
+                                <div class="title_col">
                                     {{nt.estado|mostrar_estados}} <strong>{{nt.titulo}}</strong>
                                     <br>
                                     <i class="fa fa-clock-o"></i> {{nt.creado|date:"SHORT_DATE_FORMAT"}}
                                 </div>
                             </div>
-                            <div class="col-lg-2">
-                                 <div style="padding-top:85%">
+                            <div class="col-sm-2">
+                                 <div class="ver_col">
                                      <a class="btn btn-success">Ver</a>
                                  </div>
                             </div>
                         </div>
                     {% endfor %}
-                    </div>
                 </div>
             </div>
         </div>
@@ -49,8 +48,45 @@
                 <div class="panel-heading">
                     <i class="fa fa-bars text-white"></i> Últimas 5 notificaciones de mis clientes
                 </div>
-                <div class="panel-body">
-
+                <div class="panel-body dashboard_block_panel">
+                    {% for ne in notificaciones_edificios %}
+                        <div class="row row_box {% if forloop.counter|divisibleby:2 == False %}alt0{% else %}alt1{% endif %}"">
+                            <div class="col-sm-4">
+                                {% if ne.producto %}
+                                    <a href="{% url 'productos:detail' ne.producto.id %}">
+                                        {% if ne.producto.image %}
+                                            <img src="{% thumbnail ne.producto.image 100x100 crop %}" alt="No imagen">
+                                        {% else %}
+                                            <img src="{% static 'images/sin-imagen-100x100.jpg' %}">
+                                        {% endif %}
+                                        {{ne.producto}}
+                                    </a>
+                                {% else %}
+                                    <a href="{% url 'servicios:detail' ne.servicio.id %}">
+                                        {% if ne.servicio.image %}
+                                            <img src="{% thumbnail ne.servicio.image 100x100 crop %}" alt="No imagen">
+                                        {% else %}
+                                            <img src="{% static 'images/sin-imagen-100x100.jpg' %}">
+                                        {% endif %}
+                                        {{ne.servicio}}
+                                    </a>
+                                {% endif %}
+                                </a>
+                            </div>
+                            <div class="col-sm-6" >
+                                <div class="title_col">
+                                    {{ne.estado|mostrar_estados}} <strong>{{ne.titulo}}</strong>
+                                    <br>
+                                    <i class="fa fa-clock-o"></i> {{ne.creado|date:"SHORT_DATE_FORMAT"}}
+                                </div>
+                            </div>
+                            <div class="col-sm-2">
+                                <div class="ver_col"">
+                                    <a class="btn btn-success">Ver</a>
+                                </div>
+                            </div>
+                        </div>
+                    {% endfor %}
                 </div>
             </div>
         </div>
@@ -70,3 +106,8 @@
     </div>
     {% endautoescape %}
 {% endblock %}
+
+{% block css %}
+    {{ block.super }}
+    <link href="{% static 'css/dashboard.css' %}" rel="stylesheet">
+{% endblock css %}
