Detalle de notas tecnicas- WIP

--- a/stib-administraciones/templates/dashboard/index.html
+++ b/stib-administraciones/templates/dashboard/index.html
@@ -34,7 +34,7 @@
                             </div>
                             <div class="col-sm-2">
                                  <div class="ver_col">
-                                     <a class="btn btn-success">Ver</a>
+                                     <a class="btn btn-success" href="{% url 'notas-tecnicas:detail' nt.id %}">Ver</a>
                                  </div>
                             </div>
                         </div>
