--- a/stib-administraciones/templates/base.html
+++ b/stib-administraciones/templates/base.html
@@ -19,7 +19,7 @@
             <!-- Bootstrap 3 -->
             <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
             <!-- Font-Awesome -->
-            <link href="{% static 'font-awesome/css/font-awesome.css' %}" rel="stylesheet">
+            <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
             <!-- include data-table css -->
             <link  rel="stylesheet" href="{% static 'libs/datatablejs/css/jquery.dataTables.min.css' %}">
             <link  rel="stylesheet" href="{% static 'libs/datatablejs/css/DT_bootstrap.css' %}">
