--- a/stib-administraciones/templates/edificios/edificios_administraciones_update_form.html
+++ b/stib-administraciones/templates/edificios/edificios_administraciones_update_form.html
@@ -14,7 +14,7 @@
             <h1 class="page-header">
                 Editar  "{{form.instance.direccion}}"
             </h1>
-            <form class="form-horizontal" method="post" enctype="multipart/form-data">
+            <form method="post">
                 {% csrf_token %}
                 {{ form|crispy }}
                 <div class="control-group">
